--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/animejs": "^3.1.6",
+    "sass": "^1.56.1",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "@antv/g2plot": "^2.4.22",
+    "animate.css": "^4.1.1",
+    "animejs": "^3.2.1"
   }
 }
