--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-tsconfig-paths": "^3.6.0"
   },
   "dependencies": {
     "@antv/g2plot": "^2.4.22",
     "animate.css": "^4.1.1",
-    "animejs": "^3.2.1"
+    "animejs": "^3.2.1",
+    "classnames": "^2.3.2"
   }
 }
