--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
     "classnames": "^2.3.2",
-    "danmu.js": "^1.1.6"
+    "danmu.js": "^1.1.6",
+    "eventemitter3": "^5.0.0"
   }
 }
